fixed alignment;

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -81,7 +81,6 @@ body {
   align-items: center;
   justify-content: center;
   flex-direction: column;
-  flex-wrap: nowrap;
   opacity: 0.0;
   -webkit-transition: all 500ms ease-in-out;
   -moz-transition: all 500ms ease-in-out;
@@ -91,10 +90,10 @@ body {
   position: absolute;
   width: 100%;
   height: 100%;
-  background: rgba(25, 129, 162, 0.8);
-  }
+  background: rgba(25, 129, 162, 0.8); }
 
 .projects-div {
+  text-align: center;
   animation-name: fadeInUp;
   animation-duration: 2s;
   color: white;
@@ -105,6 +104,7 @@ body {
   padding: 40px; }
 
 .about-div {
+  text-align: center;
   color: white;
   font-size: 1.5em;
   background-color: rgba(0, 0, 0, 0.3);
